Add annotation for OpenAPI 3.0 documentation generation
Issue-ID: AAF-997
